--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40sp"
         android:layout_marginTop="10dp"
+        android:padding="0dp"
         android:background="@drawable/corneredittext"
         />
    <LinearLayout
